--- a/job2/Jenkinsfile
+++ b/job2/Jenkinsfile
@@ -2,7 +2,7 @@ JOB (2)
 
 pipeline {
   environment {
-    registry = "gadidor/mydockernginx"
+    registry = "gadido30/mydockernginx"
     registryCredential = 'dockerhub'
     dockerImage = ''
   }
@@ -10,7 +10,7 @@ pipeline {
   stages {
     stage('Pull Code from GitHub') {
       steps {
-        git 'https://github.com/gadido30/jenkins1'
+        git 'https://github.com/gadido30/jenkins1/job2'
       }
     }
     stage('Build Docker Continer') {
