--- a/job2/Jenkinsfile
+++ b/job2/Jenkinsfile
@@ -1,58 +1,22 @@
-JOB (2)
+job('DockerBuildandPublishDSL') {
+    description('nginx proxy pass header change')
+     scm {
+        git {
+        remote {
+                url('https://github.com/gadido30/jenkins1/job2.git')
+                //credentials('my-gihub-cred')
+            }
+            wrappers {
+                preBuildCleanup()
+            } 
+            branch('*/' + 'main')
+        }
+    }
 
-pipeline {
-  environment {
-    registry = "gadido30/mydockernginx"
-    registryCredential = 'dockerhub'
-    dockerImage = ''
-  }
-  agent any
-  stages {
-    stage('Pull Code from GitHub') {
-      steps {
-        git 'https://github.com/gadido30/jenkins1/job2'
-      }
-    }
-    stage('Build Docker Continer') {
-      steps{
-        script {
-		sh '''
-		   default.conf << EOF
-		   server {
-               listen       80;
-               server_name  localhost;
-		       location / {
-                   proxy_pass   http://localhost:8000;
-                   proxy_set_header   Host $host;
-                   proxy_set_header   X-Real-IP $remote_addr;
-                   proxy_pass_request_headers      on;
-               }
-		   }
-		   EOF
-		   Dockerfile << EOF
-		   FROM nginx:alpine
-		   COPY default.conf /etc/nginx/conf.d/
-		   EOF
-		   
-		   
-		   '''
-          dockerImage = docker.build(registry + ":$BUILD_NUMBER", "-f Dockerfile .") 
+    steps {
+        dockerBuildAndPublish {
+            repositoryName('gadido30/job2')
+            registryCredentials('e6a34d22-3562-4e22-a525-012c681fece1')
         }
-      }
     }
-    stage('Push to DockerHub') {
-      steps{
-        script {
-          docker.withRegistry( '', registryCredential ) {
-            dockerImage.push()
-          }
-        }
-      }
-    }
-    stage('Remove Unused docker image') {
-      steps{
-        sh "docker rmi $registry:$BUILD_NUMBER"
-      }
-    }
-  }
 }
