--- a/job1/Dockerfile
+++ b/job1/Dockerfile
@@ -2,5 +2,5 @@
  WORKDIR /usr/src/app
  RUN pip install flask docker
  COPY myapps.py .
- EXPOSE 80/tcp
+ EXPOSE 80
  CMD [ "python", "./myapps.py" ] 
